<resources>
    <string name="app_name">C196</string>
    <string name="add_term_content_desc">Add term button</string>
    <string name="start_date">Start Date</string>
    <string name="dummy_start_text">JAN 01 2022</string>
    <string name="end_date">End Date</string>
    <string name="save_text">Save</string>
    <string name="isEmptyCourses">Add courses to see them here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_text">Cancel</string>
    <string name="courseTitleHint">Enter course title</string>
    <string name="statusText">Status</string>
    <string-array name="course_status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="assessment_type">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Phone Number</string>
    <string name="assessTitleHint">Assessment Title</string>
    <string name="performanceText">Performance</string>
    <string name="objectiveText">Objective</string>
    <string name="assessmentTypeText">Assessment Type</string>
    <string name="share_text">Share</string>
    <string name="add_course">Add Course</string>
    <string name="course_start_text">Course Start Date</string>
    <string name="instructorsText">Instructor</string>
    <string name="addInstrPrompt">Add Instructors to see them here.</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="instructor_phone">Instructor Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">8138675309</string>
    <string name="noteBodyHing">Enter your note body</string>
    <string name="term_title_prompt">Enter term title</string>
    <string name="homeString">Home</string>
    <string name="coursesString">Courses</string>
    <string name="assessmentsString">Assessments</string>
    <string name="termsString">Terms</string>
    <string name="assessmentText">Assessments</string>
    <string name="course_title">Course Title</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="add_note">Add Note</string>
    <string name="view_course_notes">View Course Notes</string>
    <string name="enter_assessment_title">Enter assessment title</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="note_body">Note body</string>
    <string name="assessment_start_date">Assessment Start Date</string>
    <string name="assessment_end_date">Assessment End Date</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="instructor_name_text">Instructor Name</string>
    <string name="back_to_course">Back to Course</string>
    <string name="back_to_term">Back to Term</string>
    <string name="type_text">Type</string>
</resources>