<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Note.Controllers.AddNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

    <EditText
        android:id="@+id/noteTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/note_body"
            android:minLines="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTitleInput"/>

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="40dp"
            android:text="@string/save_text"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteBody" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteBody" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>