<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Course.UI.CourseDetailed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/courseOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courseOverviewText"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/primary_dark"
                android:minHeight="48dp"
                android:layout_marginBottom="8dp"
                android:text="Course Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/courseDetailedStartText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/courseDetailedEndText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Term End Date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courseInstrLabel"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                android:minHeight="48dp"
                android:paddingBottom="8dp"
                android:text="@string/instructorsText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clipToPadding="false"
                android:padding="8dp" />

            <TextView
                android:id="@+id/courseAssessLabel"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                android:minHeight="48dp"
                android:text="@string/assessmentText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clipToPadding="false"
                android:padding="8dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>